# log-search-api

./: .gitignore  Cargo.toml  package.json  readme.md  start.sh
api/node/: node-api.sh  package-lock.json  package.json
api/node/src/: index.ts
api/node/src/api/handlers/: logsHandler.ts
api/node/src/api/routes/: logsRoutes.ts
api/rust/: rust-api.sh
api/rust/src/: main.rs
api/rust/src/handlers/: mod.rs  multi_log.rs  single_log.rs
site/: package-lock.json  package.json
site/app/: layout.tsx  page.tsx
src/: main.rs
src/handlers/: multi_log.rs  single_log.rs
web/: package.json
web/app/: layout.tsx  page.tsx
