[package]
name = "cribl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
futures = "0.3.28"
reqwest = { version = "0.11", features = ["json"] }
serde = { version="1.0.155", features=["derive"] }
url = "2.3.1"
